--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -27,7 +27,10 @@
 
 \plush{\sqmTitlePage{4}{YsGzjv0hgcc}}
 
-\pitch{\pptQuote{maurice-halstead.jpg}{Any attempt to find a \ul{universal} set of metrics that could be applied to any computer program, might at first glance appear destined to be unfruitful, if not merely \ul{difficult}. But, without universal, measurable parameters, we would be in the position of trying to develop the science of thermodynamics before the advent of a temperature scale.}{Maurice H. Halstead, \newline \textit{Elements of Software Science}, 1977}}
+\qte
+  {maurice-halstead.jpg}
+  {Any attempt to find a \ul{universal} set of metrics that could be applied to any computer program, might at first glance appear destined to be unfruitful, if not merely \ul{difficult}. But, without universal, measurable parameters, we would be in the position of trying to develop the science of thermodynamics before the advent of a temperature scale.}
+  {halstead1977elements}
 
 \plush{
 \pptBanner{Inputs}
