--- a/main.bib
+++ b/main.bib
@@ -22,3 +22,10 @@
   year={1981},
   publisher={North-Holland Publishing Company, Amsterdam, Netherlands},
 }
+
+@book{halstead1977elements,
+  title={Elements of Software Science (Operating and Programming Systems Series)},
+  author={Halstead, Maurice H.},
+  year={1977},
+  publisher={Elsevier Science Inc.}
+}
