--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -127,7 +127,10 @@ int fibonacci(int n) {
   {A test set is \ul{adequate} if it can distinguish the subject program from a collection of similar programs, called mutants, obtained by making \ul{small} syntactic modifications to the subject program.}
   {budd1981mutation}
 
-\pitch{\pptQuote{william-howden.jpg}{In \ul{weak mutation testing} method, tests are constructed which are guaranteed to force program statements which contain certain classes of errors to act incorrectly during the execution of the program over those tests.}{William E. Howden, \textit{Weak Mutation Testing and Completeness of Test Sets}, IEEE Transactions on Software Engineering 4, 1982}}
+\qte
+  {william-howden.jpg}
+  {In \ul{weak mutation testing} method, tests are constructed which are guaranteed to force program statements which contain certain classes of errors to act incorrectly during the execution of the program over those tests.}
+  {howden1982weak}
 
 \pptBanner{Weak vs. Strong Mutation Testing}
 \begin{pptWide}{3}
@@ -165,10 +168,18 @@ fibonacci(12) == 144;
 \end{pptWide}
 \plush{}
 
-\pitch{\pptQuote{jeff-offutt.jpg}{Our results indicate that \ul{weak mutation} can be applied in a manner that is almost as effective as mutation testing, and with significant computational savings.}{Jeff Offutt and Stephen D. Lee, \textit{An Empirical Evaluation of Weak Mutation}, IEEE Transactions on Software Engineering 20(5), 1994}}
+\qte
+  [Jeff Offutt]
+  {jeff-offutt.jpg}
+  {Our results indicate that \ul{weak mutation} can be applied in a manner that is almost as effective as mutation testing, and with significant computational savings.}
+  {offutt1994empirical}
 
-\pitch{\pptQuote{richard-demillo.jpg}{A mutant operator mutates \ul{one syntactic entity} of a program. Further, only one mutant operator
-is applied at a time to the program under test.}{Hiralal Agrawal, \ul{Richard A. DeMillo}, R. Hathaway, William Hsu, Wynne Hsu, Edward W. Krauser, Rhonda J. Martin, Aditya P.Mathur, Eugene Spafford, \textit{Design of Mutant Operators for the C Programming Language}, Technical Report SERC-TR-41-P, Software Engineering Research Center, Purdue University, 1989}}
+\qte
+  [Richard DeMillo]
+  {richard-demillo.jpg}
+  {A mutant operator mutates \ul{one syntactic entity} of a program. Further, only one mutant operator
+is applied at a time to the program under test.}
+  {agrawal1989design}
 
 \pitch{\begin{multicols}{2}
 \includegraphics[width=.8\linewidth]{c-operators.png}\par
