--- a/main.bib
+++ b/main.bib
@@ -29,3 +29,31 @@
   year={1977},
   publisher={Elsevier Science Inc.}
 }
+
+@article{howden1982weak,
+  title={{Weak Mutation Testing and Completeness of Test Sets}},
+  author={Howden, William E.},
+  journal={{IEEE Transactions on Software Engineering}},
+  number={4},
+  pages={371--379},
+  year={1982},
+  publisher={IEEE}
+}
+
+@article{offutt1994empirical,
+  title={{An Empirical Evaluation of Weak Mutation}},
+  author={Offutt, A. Jefferson and Lee, Stephen D.},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={20},
+  number={5},
+  pages={337--344},
+  year={1994},
+  publisher={IEEE}
+}
+
+@techreport{agrawal1989design,
+  title={{Design of Mutant Operators for the C Programming Language}},
+  author={Agrawal, Hiralal and DeMillo, Richard A. and Hathaway, R. and Hsu, William and Hsu, Wynne and Krauser, Edward W. and Martin, Rhonda J. and Mathur, Aditya P. and Spafford, Eugene},
+  year={1989},
+  institution={{Software Engineering Research Center, Purdue}}
+}
