--- a/main.bib
+++ b/main.bib
@@ -57,3 +57,14 @@
   year={1989},
   institution={{Software Engineering Research Center, Purdue}}
 }
+
+@article{frankl1997all,
+  title={{All-Uses vs Mutation Testing: An Experimental Comparison of Effectiveness}},
+  author={Frankl, Phyllis G. and Weiss, Stewart N. and Hu, Cang},
+  journal={{Journal of Systems and Software}},
+  volume={38},
+  number={3},
+  pages={235--253},
+  year={1997},
+  publisher={Elsevier}
+}
