--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -194,7 +194,11 @@ and
 {\scriptsize Source: Hiralal Agrawal et al., \textit{Design of Mutant Operators for the C Programming Language}, Technical Report SERC-TR-41-P, Software Engineering Research Center, Purdue University, 1989\par}
 \end{multicols}}
 
-\pitch{\pptQuote{phyllis-frankl.jpg}{Those mutants that compute precisely the same function are called \ul{equivalent} mutants and the others are called \ul{inequivalent} mutants.}{\ul{Phyllis G. Frankl}, Stewart N. Weiss, and Cang Hu, \textit{All-Uses vs Mutation Testing: An Experimental Comparison of Effectiveness?}, Journal of Systems and Software 38(3), 1997}}
+\qte
+  [Phyllis G. Frankl]
+  {phyllis-frankl.jpg}
+  {Those mutants that compute precisely the same function are called \ul{equivalent} mutants and the others are called \ul{inequivalent} mutants.}
+  {frankl1997all}
 
 \pptBanner{Equivalent Mutants, Example}
 \begin{pptWide}{3}
@@ -247,7 +251,7 @@ int fibonacci(int n) {
 
 \pitch{\begin{multicols}{2}
 \includegraphics[width=\linewidth]{duas.png}\par
-{\scriptsize Source: \ul{Phyllis G. Frankl}, Stewart N. Weiss, and Cang Hu, \textit{All-Uses vs Mutation Testing: An Experimental Comparison of Effectiveness?}, Journal of Systems and Software 38(3), 1997\par}
+{\scriptsize Source: \bibentry{frankl1997all}\par}
 \par\columnbreak\par
 ``Mutation coverage is more effective than dua coverage for five subjects, dua coverage --- for two others, and there is no significant difference for the remaining two. \par A definition-use association (\ul{dua} is a triple \(d\), \(u\), \(v\), such that \(d\) is a node in the program's flow graph in which variable \(v\) is defined, \(u\) is a node or edge in which \(v\) is used, and there is a definition-clear path with respect to \(v\) from \(d\) to \(u\).''\par
 \end{multicols}}
