--- a/main.bib
+++ b/main.bib
@@ -68,3 +68,76 @@
   year={1997},
   publisher={Elsevier}
 }
+
+@book{jones2007,
+  title={Estimating Software Costs: Bringing Realism to Estimating},
+  author={Jones, Capers},
+  publisher={McGraw-Hill},
+  year={2007},
+  edition={2nd},
+}
+
+@article{putnam1978general,
+  title={{A General Empirical Solution to the Macro Software Sizing and Estimating Problem}},
+  author={Putnam, Lawrence H.},
+  journal={IEEE Transactions on Software Engineering},
+  number={4},
+  pages={345--361},
+  year={1978},
+  publisher={IEEE}
+}
+
+@book{brooks1995mythical,
+  title={{The Mythical Man-month: Essays on Software Engineering}},
+  author={Brooks Jr, Frederick P.},
+  year={1995},
+  publisher={Pearson Education}
+}
+
+@article{boehm1984software,
+  title={{Software Engineering Economics}},
+  author={Boehm, Barry W.},
+  journal={{IEEE Transactions on Software Engineering}},
+  number={1},
+  pages={4--21},
+  year={1984},
+  publisher={IEEE}
+}
+
+@book{boehm2000,
+  author={Boehm, Barry and Abts, Chris and Brown, Winsor and Chulani, Sunita and Clark, Bradford K. and Horowitz, Ellis and Madachy, Ray and Reifer, Donald J. and Bert, Steece},
+  title={{Software Cost Estimation with COCOMO II}},
+  publisher={Englewood Cliffs, Prentice-Hall},
+  year={2000}
+}
+
+@inproceedings{albrecht1979measuring,
+  title={{Measuring Application Development Productivity}},
+  author={Albrecht, Allan J.},
+  booktitle={Proceedings of the Joint SHARE, GUIDE, and IBM Application Development Symposium},
+  pages={83--92},
+  year={1979}
+}
+
+@article{albrecht1983software,
+  title={{Software Function, Source Lines of Code, and Development Effort Prediction: A Software Science Validation}},
+  author={Albrecht, Allan J. and Gaffney, John E.},
+  journal={{IEEE Transactions on Software Engineering}},
+  number={6},
+  pages={639--648},
+  year={1983},
+  publisher={IEEE}
+}
+
+@book{iso20926foreword,
+  title={{Foreword to IFPUG Functional Size Measurement Method}},
+  year={2009},
+  author={Capers T. Jones},
+  publisher={ISO/IEC 20926:2009}
+}
+
+@misc{iso20926,
+  title={{ISO/IEC 20926:2009, IFPUG Functional Size Measurement Method}},
+  year={2009},
+  author={International Stardardization Organization (ISO)},
+}
