--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -108,7 +108,7 @@
     \item Function Points
 
 {\color{gray}
-    \item Bugs
+    \item Bugs / defects density, etc.
     \item Stars
     \item Contributors
     \item Forks and Pull Requests
