--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -39,28 +39,17 @@
 
 \qte
   {lawrence-putnam.jpg}
-  {In general, the \ul{size} of the product in source \ul{statements} is \(S = C \times K^{1/3} \times t^{4/3}\), where \(C\) is a productivity constant, \(K\) is development effort, and \(t\) is time.}
+  {\textbf{SLIM}: In general, the \ul{size} of the product in source \ul{statements} is \(S = C \times K^{1/3} \times t^{4/3}\), where \(C\) is a productivity constant, \(K\) is development effort, and \(t\) is time.}
   {putnam1978general}
 
 \qte
   {barry-boehm.jpg}
-  {We compute the \ul{estimated development effort} as the nominal development effort times the product of the effort multipliers for the 15 \ul{cost driver attributes}... A nominal development effort is estimated as a function of the product's size in delivered source \ul{instructions} in thousands (KDSI) and the project's development mode.}
+  {\textbf{COCOMO}: We compute the \ul{estimated development effort} as the nominal development effort times the product of the effort multipliers for the 15 \ul{cost driver attributes}... A nominal development effort is estimated as a function of the product's size in delivered source \ul{instructions} in thousands (KDSI) and the project's development mode.}
   {boehm1984software}
 
 \qte
-  {cocomo-2.jpg}
-  {Success in all types of organization depends increasingly on the development of customized software solutions, yet more than half of software projects now in the works will \ul{exceed} both their \ul{schedules} and their \ul{budgets} by more than 50\%.}
-  {boehm2000}
-
-Parametric Review of Information for Costing and Evaluation – Software (PRICE-S)
-
-Software Evaluation and Estimation of Resources – Software Estimating Model (SEER-SEM).
-
-Doty Model
-
-\qte
   {allan-albrecht.jpg}
-  {The general approach is to count the number of external user \ul{inputs}, \ul{inquiries}, \ul{outputs}, and master \ul{files} delivered by the development project. These factors are outward manifestations of any application. They cover all the functions in an application.}
+  {\textbf{FPA}: The general approach is to count the number of external user \ul{inputs}, \ul{inquiries}, \ul{outputs}, and master \ul{files} delivered by the development project. These factors are outward manifestations of any application. They cover all the functions in an application.}
   {albrecht1979measuring}
 
 \pitch{\begin{multicols}{2}
@@ -70,10 +59,69 @@ Doty Model
 {\scriptsize Source: \bibentry{albrecht1979measuring}\par}
 \end{multicols}}
 
+\pitch{\begin{multicols}{2}
+\includegraphics[width=\linewidth]{functions.png}
+\par\columnbreak\par
+``In order to find the adjusted function point (AFP) value, the UFP (the raw function count weighted by the appropriate complexity shown in the Table) is multiplied by the VAF.''\par
+{\scriptsize Source: \bibentry{galorath2006software}\par}
+\end{multicols}}
+
+\qte
+  {peter-chen.jpg}
+  {The entity-relationship (ER) model adopts the more natural view that the real world consists of \ul{entities} and \ul{relationships}. It incorporates some of the important semantic information about the real world.}
+  {chen1976entity}
+
+\pitch{
+\pptPic{1}{er-diagram.png}
+{\scriptsize Source: \bibentry{chen1976entity}\par}}
+
+\qte
+  {tom-demarco.jpg}
+  {The Data Flow Diagram shows flow of data, not of control. This is the difference between Data Flow Diagrams and flowcharts. The Data Flow Diagram portrays a situation from the point of view of the data, while a flowchart portrays it from the point of view of those who act upon the data.}
+  {demarco1978}
+
+\pitch{
+\pptPic{.75}{dfd.png}
+\par
+{\scriptsize Source: \bibentry{demarco1978}\par}}
+
 \qte
   {sloc-vs-fps.png}
   {At least for the applications analyzed, both the development work-hours and application size in ``SLOC'' are \ul{strong functions} of ``function points'' and ``input/output data item count.'' Further, it appears that basing applications development effort estimates on the amount of function to be provided by an application rather than an estimate of ``SLOC'' may be \ul{superior}.}
   {albrecht1983software}
+
+\qte
+  {book-of-charles-symons.jpg}
+  {The major difference is that \textbf{Mk II FPA}, with its \ul{finer granularity}, is a continuous measure whereas IFPUG limits component size once a threshold is reached.}
+  {symons1991software}
+
+\pitch{
+\pptPic{1}{mk-ii.png}
+{\scriptsize Source: \bibentry{symons1991software}\par}}
+
+\qte
+  {daniel-galorath.jpg}
+  {\textbf{SEER-SEM} is based on the concept that if a user can describe the \ul{essential characteristics} of a project and range of size, SEER-SEM can provide estimates of schedules, efforts, staffing, risks, uncertainties, and defects, characterizing each as a most likely \ul{estimate} or a risk estimate.}
+  {galorath2006software}
+
+\pitch{\begin{multicols}{2}
+\includegraphics[width=\linewidth]{seer-fbs.png}
+\par\columnbreak\par
+``SEER-FBS (``function-based sizing''), introduced in 1992, is consistent with IFPUG counting rules, but adds a sixth category (\ul{internal functions}) that allows users to account for highly algorithmic processes of systems such as real-time and embedded-type systems.''\par
+{\scriptsize Source: \bibentry{galorath2006software}\par}
+\end{multicols}}
+
+\qte
+  {cocomo-2.jpg}
+  {\textbf{COCOMO-II}: Success in all types of organization depends increasingly on the development of customized software solutions, yet more than half of software projects now in the works will \ul{exceed} both their \ul{schedules} and their \ul{budgets} by more than 50\%.}
+  {boehm2000}
+
+\pitch{\begin{multicols}{2}
+\includegraphics[width=\linewidth]{loc-per-fp.png}
+\par\columnbreak\par
+``\ul{Backfiring} is converting lines of code to function points by dividing the line count by a \ul{conversion ratio}. The author does not recommend backfiring as an approach to generating function points.''\par
+{\scriptsize Source: \bibentry{galorath2006software}\par}
+\end{multicols}}
 
 \qte
   {capers-jones.jpg}
@@ -112,12 +160,22 @@ CFP is the unadjusted function points added by the conversion unadjusted functio
 \end{multicols}}
 
 \qte
-  {book-of-charles-symons.jpg}
-  {...}
-  {symons1991software}
+  {roger-pressman.jpg}
+  {The function point metric, like LOC, is relatively controversial... Opponents claim that the method requires some `sleight of hand' in that computation is based on subjective, rather than objective, data.}
+  {pressman2005software}
 
-\pitch{\pptBanner{Function Points}
-\begin{itemize}
+\pitch{\pptBanner{Function Point Standards}
+\begin{itemize}\setlength\itemsep{0pt}
+\item Mark-II --- ISO/IEC 20968:2002
+\item IFPUG --- ISO/IEC 20926:2009
+\item FiSMA --- ISO/IEC 29881:2010
+\item COSMIC --- ISO/IEC 19761:2011
+\item Nesma --- ISO/IEC 24570:2018
+\item OMG --- ISO/IEC 19515:2019
+\end{itemize}}
+
+\pitch{\pptBanner{Function Point}
+\begin{itemize}\setlength\itemsep{0pt}
 \item Early and easy function points
 \item COSMIC Function Points
 \item Mk II Function Points
