--- a/main.bib
+++ b/main.bib
@@ -141,3 +141,36 @@
   year={2009},
   author={International Stardardization Organization (ISO)},
 }
+
+@book{galorath2006software,
+  title={{Software Sizing, Estimation, and Risk Management: When Performance Is Measured Performance Improves}},
+  author={Galorath, Daniel D. and Evans, Michael W.},
+  year={2006},
+  publisher={CRC Press}
+}
+
+@book{pressman2005software,
+  title={{Software Engineering: A Practitioner's Approach}},
+  author={Pressman, Roger S. and Maxim, Bruce},
+  year={2014},
+  edition={8},
+  publisher={McGraw Hill}
+}
+
+@article{chen1976entity,
+  title={{The Entity-Relationship Model---Toward a Unified View of Data}},
+  author={Chen, Peter Pin-Shan},
+  journal={{ACM Transactions on Database Systems}},
+  volume={1},
+  number={1},
+  pages={9--36},
+  year={1976},
+  publisher={ACM}
+}
+
+@book{demarco1978,
+  title={{Structure Analysis and System Specification}},
+  author={Tom DeMarco},
+  year={1978},
+  publisher={Prentice Hall},
+}
