--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -72,12 +72,13 @@
   {chen1976entity}
 
 \pitch{
-\pptPic{1}{er-diagram.png}
+\pptPic{.95}{er-diagram.png}
+\par
 {\scriptsize Source: \bibentry{chen1976entity}\par}}
 
 \qte
   {tom-demarco.jpg}
-  {The Data Flow Diagram shows flow of data, not of control. This is the difference between Data Flow Diagrams and flowcharts. The Data Flow Diagram portrays a situation from the point of view of the data, while a flowchart portrays it from the point of view of those who act upon the data.}
+  {The Data Flow Diagram shows flow of \ul{data}, not of \ul{control}. This is the difference between Data Flow Diagrams and flowcharts. The Data Flow Diagram portrays a situation from the point of view of the data, while a flowchart portrays it from the point of view of those who act upon the data.}
   {demarco1978}
 
 \pitch{
@@ -96,7 +97,8 @@
   {symons1991software}
 
 \pitch{
-\pptPic{1}{mk-ii.png}
+\pptPic{.95}{mk-ii.png}
+\par
 {\scriptsize Source: \bibentry{symons1991software}\par}}
 
 \qte
@@ -161,7 +163,7 @@ CFP is the unadjusted function points added by the conversion unadjusted functio
 
 \qte
   {roger-pressman.jpg}
-  {The function point metric, like LOC, is relatively controversial... Opponents claim that the method requires some `sleight of hand' in that computation is based on subjective, rather than objective, data.}
+  {The function point metric, like LOC, is relatively \ul{controversial}... Opponents claim that the method requires some `sleight of hand' in that computation is based on \ul{subjective}, rather than \ul{objective}, data.}
   {pressman2005software}
 
 \pitch{\pptBanner{Function Point Standards}
@@ -174,22 +176,13 @@ CFP is the unadjusted function points added by the conversion unadjusted functio
 \item OMG --- ISO/IEC 19515:2019
 \end{itemize}}
 
-\pitch{\pptBanner{Function Point}
+\pitch{\pptBanner{Some Other Function Points}
 \begin{itemize}\setlength\itemsep{0pt}
 \item Early and easy function points
-\item COSMIC Function Points
-\item Mk II Function Points
-\item Nesma Function Points
-\item FiSMA Function Points
 \item Engineering function points
 \item Object-Oriented Function Points (OOFP)
 \item Weighted Micro Function Points
 \item Fuzzy Function Points
-\end{itemize}}
-
-\pitch{Function Points may be measured by these tools:
-\begin{itemize}
-\item ...
 \end{itemize}}
 
 \end{document}
