--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -166,6 +166,16 @@ CFP is the unadjusted function points added by the conversion unadjusted functio
   {The function point metric, like LOC, is relatively \ul{controversial}... Opponents claim that the method requires some `sleight of hand' in that computation is based on \ul{subjective}, rather than \ul{objective}, data.}
   {pressman2005software}
 
+\qte
+  {../07-LCOM/chris-kemerer.jpg}
+  {Function Points and Function Counts (adjusted FPs) can be used as predictors of KSLOC. In particular, Function Counts \ul{correlated} with KSLOC at the level of \ul{75.1 percent}, which is similar to the correlations published by \citet{albrecht1983software}, and is likely to be good enough to be of use to the software manager.}
+  {kemerer1987empirical}
+
+\qte
+  {graham-low.jpg}
+  {Function point counts appear to be a more consistent a \emph{priori} measure of software size than source lines of code. As such it is recommended that function point \ul{estimates} be used in preference to lines of code estimates as the measure of system size.}
+  {low1990function}
+
 \pitch{\pptBanner{Function Point Standards}
 \begin{itemize}\setlength\itemsep{0pt}
 \item Mark-II --- ISO/IEC 20968:2002
