--- a/main.bib
+++ b/main.bib
@@ -174,3 +174,25 @@
   year={1978},
   publisher={Prentice Hall},
 }
+
+@article{kemerer1987empirical,
+  title={{An Empirical Validation of Software Cost Estimation Models}},
+  author={Kemerer, Chris F.},
+  journal={{Communications of the ACM}},
+  volume={30},
+  number={5},
+  pages={416--429},
+  year={1987},
+  publisher={ACM}
+}
+
+@article{low1990function,
+  title={{Function Points in the Estimation and Evaluation of the Software Process}},
+  author={Low, Graham C. and Jeffery, D. Ross},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={16},
+  number={1},
+  pages={64--71},
+  year={1990},
+  publisher={IEEE}
+}
