--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -44,7 +44,7 @@
 
 \qte
   {barry-boehm.jpg}
-  {\textbf{COCOMO}: We compute the \ul{estimated development effort} as the nominal development effort times the product of the effort multipliers for the 15 \ul{cost driver attributes}... A nominal development effort is estimated as a function of the product's size in delivered source \ul{instructions} in thousands (KDSI) and the project's development mode.}
+  {\textbf{COCOMO} (\textbf{Co}nstructive \textbf{Co}st \textbf{Mo}del): We compute the \ul{estimated development effort} as the nominal development effort times the product of the effort multipliers for the 15 \ul{cost driver attributes}... A nominal development effort is estimated as a function of the product's size in delivered source \ul{instructions} in thousands (KDSI) and the project's development mode.}
   {boehm1984software}
 
 \qte
