--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -98,9 +98,17 @@ delta for the system will be close to zero.''
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{nachiappan-nagappan.jpg}{Our case study provides strong support for the following conclusion: increase in relative code churn measures is accompanied by an increase in system \ul{defect density}.}{\textit{Use of Relative Code Churn Measures to Predict System Defect Density}, \ul{Nachiappan Nagappan} and Thomas Ball, Proceedings of the International Conference on Software Engineering (ICSE), 2005}}
+\qte
+  [Nachiappan Nagappan]
+  {nachiappan-nagappan.jpg}
+  {Our case study provides strong support for the following conclusion: increase in relative code churn measures is accompanied by an increase in system \ul{defect density}.}
+  {nagappan2005use}
 
-\pitch{\pptQuote{rudolf-ferenc.jpg}{We can conclude that committing files with higher cumulative code churn values (i.e. those of longer change history) is more likely to result in negative maintainability change.}{\textit{Cumulative Code Churn: Impact on Maintainability}, Csaba Farag{\'o}, P{\'e}ter Heged{\H{u}}s, \ul{Rudolf Ferenc}, Proceedings of the International Working Conference on Source Code Analysis and Manipulation (SCAM), 2015}}
+\qte
+  [Rudolf Ferenc]
+  {rudolf-ferenc.jpg}
+  {We can conclude that committing files with higher cumulative code churn values (i.e. those of longer change history) is more likely to result in negative maintainability change.}
+  {farago2015cumulative}
 
 \pitch{\pptQuote{tobias-olsson.jpg}{Non-normal code churn can be a tangible and measurable \ul{effect} of architectural violations in source code. However, more research is needed to better understand this connection, e.g., if violations are the \ul{cause}, the size of the effect, the cost of refactoring, and whether it is generalizable to other system.}{\textit{The Relationship of Code Churn and Architectural Violations in
 the Open Source Software JabRef}, Tobias Olsson, Morgan Ericsson, Anna Wingkvist, Proceedings of the 11th European Conference on Software Architecture: Companion Proceedings, 2017}}
