--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -155,7 +155,16 @@ measurements of code coverage}.''\par
 
 \pitch{\pptBanner{Code Coverage Threshold Levels in Google}\includegraphics[width=.7\textwidth]{levels.png}}
 
-\pitch{\pptQuote{adam-bender.jpg}{Code coverage \ul{does not guarantee} that the covered lines or branches have been tested correctly, it just guarantees that they have been executed by a test. But a low code coverage number \ul{does guarantee} that large areas of the product are going completely untested by automation on every single deployment.}{\textit{Code Coverage Best Practices}, Carlos Arguelles, Marko Ivankovi{\'c}, \ul{Adam Bender}, \href{https://testing.googleblog.com/2020/08/code-coverage-best-practices.html}{Google Blog}, 2020}}
+\qte
+  [Adam Bender]
+  {adam-bender.jpg}
+  {Code coverage \ul{does not guarantee} that the covered lines or branches have been tested correctly, it just guarantees that they have been executed by a test. But a low code coverage number \ul{does guarantee} that large areas of the product are going completely untested by automation on every single deployment.}
+  {arguelles2020}
+
+\qte
+  {survey.png}
+  {Many \ul{contracts} are specifying that a certain \ul{percentage} of the statements or instructions must be successfully executed before the acceptance of the software by the customer.}
+  {bowen1979survey}
 
 \pitch{\pptBanner{Industry Standards that Require Code Coverage}
 \begin{itemize}
