--- a/main.bib
+++ b/main.bib
@@ -196,3 +196,120 @@
   year={1990},
   publisher={IEEE}
 }
+
+@inproceedings{nagappan2005use,
+  title={{Use of Relative Code Churn Measures to Predict System Defect Density}},
+  author={Nagappan, Nachiappan and Ball, Thomas},
+  booktitle={{Proceedings of the 27th International Conference on Software Engineering}},
+  pages={284--292},
+  year={2005}
+}
+
+@inproceedings{farago2015cumulative,
+  title={{Cumulative Code Churn: Impact on Maintainability}},
+  author={Farag{\'o}, Csaba and Heged{\H{u}}s, P{\'e}ter and Ferenc, Rudolf},
+  booktitle={{Proceedings of the 15th International Working Conference on Source Code Analysis and Manipulation (SCAM)}},
+  pages={141--150},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{kelly1992analysis,
+  title={{An Analysis of Defect Densities Found During Software Inspections}},
+  author={Kelly, John C. and Sherif, Joseph S. and Hops, Jonathan},
+  journal={{Journal of Systems and Software}},
+  volume={17},
+  number={2},
+  pages={111--117},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@inproceedings{mohagheghi2004empirical,
+  title={{An Empirical Study of Software Reuse vs. Defect-Density and Stability}},
+  author={Mohagheghi, Parastoo and Conradi, Reidar and Killi, Ole M. and Schwarz, Henrik},
+  booktitle={{Proceedings of the 26th International Conference on Software Engineering}},
+  pages={282--291},
+  year={2004},
+  organization={IEEE}
+}
+
+@article{fagan1976design,
+  title={{Design and Code Inspections to Reduce Errors in Program Development}},
+  author={Fagan, Michael},
+  journal={{IBM Systems Journal}},
+  number={3},
+  year={1976},
+}
+
+@misc{ieee982,
+  title={{IEEE Std 982.2-1988: Guide for the Use of IEEE Standard Dictionary of Measures to Produce Reliable Software}},
+  author={IEEE Standards Board},
+  year={1989},
+}
+
+@article{basili1984software,
+  title={{Software Errors and Complexity: An Empirical Investigation}},
+  author={Basili, Victor R. and Perricone, Barry T.},
+  journal={{Communications of the ACM}},
+  volume={27},
+  number={1},
+  pages={42--52},
+  year={1984},
+}
+
+@misc{arguelles2020,
+  title={{Code Coverage Best Practices}},
+  author={Arguelles, Carlos and Ivankovi{\'c}, Marko and Bender, Adam},
+  year={2020},
+  url={https://testing.googleblog.com/2020/08/code-coverage-best-practices.html}
+}
+
+@article{bowen1979survey,
+  title={{A Survey of Standards and Proposed Metrics for Software Quality Testing}},
+  author={Bowen, John B.},
+  journal={Computer},
+  volume={12},
+  number={08},
+  pages={37--42},
+  year={1979},
+  publisher={IEEE Computer Society}
+}
+
+@article{jones1996pragmatics,
+  title={{The Pragmatics of Software Process Improvements}},
+  author={Jones, Capers},
+  journal={{Technical Council on Software Engineering}},
+  volume={14},
+  number={2},
+  year={1996}
+}
+
+@article{fenton1999critique,
+  title={{A Critique of Software Defect Prediction Models}},
+  author={Fenton, Norman E. and Neil, Martin},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={25},
+  number={5},
+  pages={675--689},
+  year={1999},
+  publisher={IEEE}
+}
+
+@book{jones1991,
+  title={{Applied Software Measurement}},
+  author={Jones, Capers},
+  publisher={McGraw-Hill},
+  year={1991},
+}
+
+@article{koru2008investigation,
+  title={{An Investigation into the Functional Form of the Size-Defect Relationship for Software Modules}},
+  author={Koru, A G{\"u}ne{\c{s}} and Zhang, Dongsong and El Emam, Khaled and Liu, Hongfang},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={35},
+  number={2},
+  pages={293--304},
+  year={2008},
+  publisher={IEEE}
+}
