--- a/syllabus/syllabus.tex
+++ b/syllabus/syllabus.tex
@@ -107,8 +107,9 @@
 
     \item Function Points
 
+    \item Defects
+
 {\color{gray}
-    \item Bugs / defects density, etc.
     \item Stars
     \item Contributors
     \item Forks and Pull Requests
