--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Mutation Coverage}
 \begin{document}
 
-\plush{\sqmTitlePage{16}{}}
+\plush{\sqmTitlePage{16}{WYWSv_PucHc}}
 
 \pptBanner{Example, Part I: Code Coverage}
 \begin{multicols}{2}
