--- a/main.bib
+++ b/main.bib
@@ -313,3 +313,21 @@
   year={2008},
   publisher={IEEE}
 }
+
+@book{mcconnell2004code,
+  title={{Code Complete}},
+  author={McConnell, Steve},
+  year={2004},
+  publisher={Pearson Education}
+}
+
+@article{cobb1990engineering,
+  title={{Engineering Software under Statistical Quality Control}},
+  author={Cobb, Richard H. and Mills, Harlan D.},
+  journal={{IEEE software}},
+  volume={7},
+  number={6},
+  pages={45--54},
+  year={1990},
+  publisher={IEEE}
+}
