--- a/sqm.sty
+++ b/sqm.sty
@@ -31,6 +31,7 @@
 \RequirePackage[static]{clicks}
 \RequirePackage[template,scheme=light]{ppt-slides}
 \RequirePackage[nocn,novert]{ffcode}
+\RequirePackage{booktabs}
 \RequirePackage{tikz}
   \usetikzlibrary{positioning,calc,arrows,arrows.meta}
 \RequirePackage{soul}
