--- a/07-LCOM/07-LCOM.tex
+++ b/07-LCOM/07-LCOM.tex
@@ -208,7 +208,11 @@ LCOM is the number of disjoint sets formed by the intersection of the \(n\) sets
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{kemerer.png}{Let \(P = \{ (v_i, v_j) | v_i \cap v_j = \emptyset \}\) and \(Q = \{ (v_i, v_j) | v_i \cap v_j \not= \emptyset \}\). Then, \( \texttt{LCOM} = |P| - |Q| \), but not less than zero. Thus, the LCOM is a count of the number of method pairs whose similarity is 0 minus the count of method pairs whose similarity is not zero.}{\textit{A Metrics Suite for Object Oriented Design}, Shyam R. Chidamber and Chris F. Kemerer, IEEE Transactions on Software Engineering, 20.6, 1994}}
+\qte
+  [Chris F. Kemerer]
+  {kemerer.png}
+  {Let \(P = \{ (v_i, v_j) | v_i \cap v_j = \emptyset \}\) and \(Q = \{ (v_i, v_j) | v_i \cap v_j \not= \emptyset \}\). Then, \( \texttt{LCOM} = |P| - |Q| \), but not less than zero. Thus, the LCOM is a count of the number of method pairs whose similarity is 0 minus the count of method pairs whose similarity is not zero.}
+  {chidamber1994metrics}
 
 \pptBanner{LCOM Example (working)}
 \begin{multicols}{2}
