--- a/main.bib
+++ b/main.bib
@@ -331,3 +331,36 @@
   year={1990},
   publisher={IEEE}
 }
+
+@article{basili1996validation,
+  title={{A Validation of Object-Oriented Design Metrics as Quality Indicators}},
+  author={Basili, Victor R. and Briand, Lionel C. and Melo, Walc{\'e}lio L.},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={22},
+  number={10},
+  pages={751--761},
+  year={1996},
+  publisher={IEEE}
+}
+
+@article{chidamber1994metrics,
+  title={{A Metrics Suite for Object Oriented Design}},
+  author={Chidamber, Shyam R. and Kemerer, Chris F.},
+  journal={{IEEE Transactions on Software Engineering}},
+  volume={20},
+  number={6},
+  pages={476--493},
+  year={1994},
+  publisher={IEEE}
+}
+
+@article{radjenovic2013software,
+  title={{Software Fault Prediction Metrics: A Systematic Literature Review}},
+  author={Radjenovi{\'c}, Danijel and Heri{\v{c}}ko, Marjan and Torkar, Richard and {\v{Z}}ivkovi{\v{c}}, Ale{\v{s}}},
+  journal={{Information and Software Technology}},
+  volume={55},
+  number={8},
+  pages={1397--1418},
+  year={2013},
+  publisher={Elsevier}
+}
