--- a/sqm.sty
+++ b/sqm.sty
@@ -69,6 +69,7 @@
   \plush{\pptThought{\raggedright\textcolor{orange}{\Huge\thethght.} #1}}
 }
 
+\newcommand\nospell[1]{#1}
 \newcommand\pitch[1]{\plush{\begin{pptMiddle} #1 \end{pptMiddle}}}
 \newcommand\qte[4][]{\pitch{\pptQuote[\scriptsize\scshape\color{gray}{#1}]{#2}{#3}{\color{gray}\rmfamily\scriptsize\bibentry{#4}}}}
 
