--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -167,6 +167,12 @@
   {nagappan2005use}
 
 \qte
+  [Thomas Ball]
+  {thomas-ball.jpg}
+  {Our results show that the \ul{static analysis} defect density is correlated at statistically significant levels to the \ul{pre-release} defect density determined by various testing activities. Further, the static analysis defect density can be used to predict the pre-release defect density with a high degree of sensitivity.}
+  {nagappan2005static}
+
+\qte
   [A G{\"u}ne{\c{s}} Koru]
   {gunes-koru.jpg}
   {We studied four large-scale object-oriented products, Mozilla, Cn3d, JBoss, and Eclipse. We observed that defect proneness increased as class size increased, but at a \ul{slower} rate; smaller classes were proportionally more problematic than larger classes.}
@@ -282,6 +288,26 @@
 \end{pptWide}
 \par
 {\scriptsize Source: \bibentry{radjenovic2013software}\par}}
+
+\qte
+  [Xiao Yu]
+  {xiao-yu.jpg}
+  {The problem of predicting the precise number of defects via regression algorithms is far from being solved.}
+  {yu2022predicting}
+
+\pitch{\begin{multicols}{2}
+\includegraphics[width=.8\linewidth]{predicting-methods.png}
+\par
+{\scriptsize Source: \bibentry{yu2022predicting}\par}
+\par\columnbreak\par
+``Software testers want to not only know which software modules should be inspected first, but also evaluate the reliability and maintenance effort of each module. Therefore, they can first employ the historical data to construct a \ul{Defect Number Prediction} (DNP) model, then use the two trained models to predict the defective-proneness or the number of defects.''
+\end{multicols}}
+
+\qte
+  [Kazuhiro Yamashita]
+  {kazuhiro-yamashita.jpg}
+  {Although we found some support for findings in recent literature that \ul{smaller files} have higher defects density, we found further evidence that \ul{very large} or \ul{complex} files have lower defect densities and in some cases even lower defect proneness. Our findings have immediate practical implications: the redistribution of Java code into smaller and less complex files may be counterproductive.}
+  {yamashita2016thresholds}
 
 \pitch{\pptBanner{My Own Statistics (2 Feb 2024)}
 {\ttfamily\small\begin{tabular}{llrrr}
