--- a/main.bib
+++ b/main.bib
@@ -364,3 +364,30 @@
   year={2013},
   publisher={Elsevier}
 }
+
+@article{yu2022predicting,
+  title={{Predicting the Precise Number of Software Defects: Are We There Yet?}},
+  author={Yu, Xiao and Keung, Jacky and Xiao, Yan and Feng, Shuo and Li, Fuyang and Dai, Heng},
+  journal={{Information and Software Technology}},
+  volume={146},
+  pages={106847},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@inproceedings{yamashita2016thresholds,
+  title={{Thresholds for Size and Complexity Metrics: A Case Study from the Perspective of Defect Density}},
+  author={Yamashita, Kazuhiro and Huang, Changyun and Nagappan, Meiyappan and Kamei, Yasutaka and Mockus, Audris and Hassan, Ahmed E. and Ubayashi, Naoyasu},
+  booktitle={{Proceedings of the International Conference on Software Quality, Reliability and Security (QRS)}},
+  pages={191--201},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{nagappan2005static,
+  title={{Static Analysis Tools as Early Indicators of Pre-release Defect Density}},
+  author={Nagappan, Nachiappan and Ball, Thomas},
+  booktitle={{Proceedings of the 27th International Conference on Software Engineering}},
+  pages={580--586},
+  year={2005}
+}
